--- a/react-frontend/src/App.css
+++ b/react-frontend/src/App.css
@@ -24,21 +24,28 @@ body {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.score-box {
-    position: absolute;
+.left-container {
+    position: fixed;
     top: 20px;
     right: 20px;
+    display: flex;
+    align-items: center;
+}
+
+.score-box {
+    display: inline-block;
     background: white;
     padding: 15px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     text-align: left;
 }
-  
+
 .rules {
-    position: absolute;
+    /* position: relative;
     top: 20px;
-    right: 210px;
+    right: 210px; */
+    margin-right: 20px;
 }
 
 .rules:hover {
