--- a/react-frontend/src/css/SinglePlayer.css
+++ b/react-frontend/src/css/SinglePlayer.css
@@ -1,4 +1,95 @@
-body {
+.App-Container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 1em;
+    text-align: center;
+    gap: 1em
+}
+
+.difficulty-buttons-group {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.difficulty-button {
+    padding: 10px 20px;
+    margin-top: 10px;
+    font-size: 1em;
+    background-color: #ffffff;
+    color: black;
+    border: 2px solid #ccc;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.difficulty-button:hover {
+    border: 2px solid #8196e0;
+}
+
+.selected-difficulty-button {
+    padding: 10px 20px;
+    margin-top: 10px;
+    font-size: 1em;
+    background-color: #ffffff;
+    color: black;
+    border: 2px solid #8196e0;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.right-container {
+    display: flex;
+    align-items: center;
+    position: absolute; 
+    top: 0; 
+    right: 0; 
+    padding: 1vw;
+    gap: 1vw;
+}
+
+.score-box {
+    border-radius: 20px;
+    text-align: center;
+    padding: 0.5em;
+    box-sizing: border-box;
+    margin: 1.5px;
+    border: 1.5px solid; 
+    border-color: white;
+}
+
+.rules {
+    position: relative;
+}
+
+.rules:hover {
+    color: #8196e0;
+    cursor: pointer;
+}
+
+.player-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    width: 80vw; 
+    height: 100vh;
+}
+
+.player {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+}
+
+.search-bar {
+    width: 30vw;
+    text-align: left;
+}
+
+/* body {
     font-family: Arial, sans-serif;
     background-color: #142650;
     margin: 0;
@@ -46,7 +137,7 @@ body {
     right: 20px;
     display: flex;
     /* align-items: center; */
-}
+/* }
 
 .score-box {
     display: inline-block;
@@ -61,7 +152,7 @@ body {
     /* position: relative;
     top: 20px;
     right: 210px; */
-    margin-right: 20px;
+    /* margin-right: 20px;
 }
 
 .rules:hover {
@@ -109,9 +200,9 @@ button {
 .start-box {
     position: absolute;
     /* left: center; */
-    top: 20px;
+    /* top: 20px; */
     /* flex-direction: column; */
-}
+/* }
 
 .start-player {
     position: absolute;
@@ -152,7 +243,7 @@ button:disabled {
     display: flex;
     justify-content: space-between;
     gap: 10px; /* Add horizontal space between buttons */
-}
+/* }
 
 button:hover {
     background-color: #0056b3;
@@ -168,4 +259,4 @@ button:hover {
     bottom: 0;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
+} */
