--- a/react-frontend/src/css/Homepage.css
+++ b/react-frontend/src/css/Homepage.css
@@ -1,11 +1,24 @@
 .Homepage-Container {
-    align-content: center;
-    padding: 5em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     text-align: center;
+    padding: 1em;
+}
+
+.header {
+    display: flex;
+    flex-direction: row;
+    width: 100vw;
 }
   
 .Homepage-Box {
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 0.5em; 
+}
+
+.Gamemode-Button {
+    width: 8em;
 }
