--- a/react-frontend/src/css/SinglePlayer.css
+++ b/react-frontend/src/css/SinglePlayer.css
@@ -7,6 +7,13 @@
     gap: 1em
 }
 
+.header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 100vw;
+}
+
 .difficulty-buttons-group {
     display: flex;
     flex-direction: row;
