--- a/react-frontend/src/css/Scoreboard.css
+++ b/react-frontend/src/css/Scoreboard.css
@@ -13,3 +13,11 @@
     position: absolute;
     right: 30px;
 }
+
+.score-head {
+    position: relative;
+    vertical-align: middle;
+    font-size: x-large;
+    font-weight: bold;
+    left: 194px;
+}
