--- a/react-frontend/src/css/Multiplayer.css
+++ b/react-frontend/src/css/Multiplayer.css
@@ -14,84 +14,84 @@
     width: 100vw;
 }
 
-.difficulty-buttons-group {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-.difficulty-button {
-    padding: 10px 20px;
-    margin-top: 10px;
-    font-size: 1em;
-    background-color: #ffffff;
-    color: black;
-    border: 2px solid #ccc;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-.difficulty-button:hover {
-    border: 2px solid #8196e0;
-}
-
-.selected-difficulty-button {
-    padding: 10px 20px;
-    margin-top: 10px;
-    font-size: 1em;
-    background-color: #ffffff;
-    color: black;
-    border: 2px solid #8196e0;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-.right-container {
-    display: flex;
+.Menu-Box {
+    background-color: var(--chakra-colors-chakra-subtle-bg);
+    border-radius: 0.938rem;
+    padding: 2em;
+    gap: 2em;
+    display: flex; 
+    flex-direction: column;
     align-items: center;
-    position: absolute; 
-    top: 0; 
-    right: 0; 
-    padding: 1vw;
-    gap: 1vw;
 }
 
-.score-box {
-    border-radius: 20px;
-    text-align: center;
-    padding: 0.5em;
-    box-sizing: border-box;
-    margin: 1.5px;
-    border: 1.5px solid; 
-    border-color: white;
-}
-
-.rules {
-    position: relative;
-}
-
-.rules:hover {
-    color: #8196e0;
-    cursor: pointer;
-}
-
-.player-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    width: 80vw; 
-    height: 100vh;
-}
-
-.player {
+.Form {
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 1em;
+    padding: 1em;
+    border: solid var(--chakra-colors-chakra-border-color);
+    border-radius: 0.938rem;
 }
 
-.search-bar {
-    width: 30vw;
-    text-align: left;
+.Menu-Element {
+    width: 10em; 
+}
+
+.Chat { 
+    list-style-type: none;
+}
+
+.selectDif {
+
+    background: var(--chakra-colors-chakra-subtle-bg); 
+    border-radius: 1.25rem;
+    border-color: #ff7f26;
+    border-width: 0.188rem; 
+    position: relative;
+    width: 90vw;  
+    top: 40%;
+    min-height: 12rem;
+    height: auto;
+    display: flex;
+}
+
+.bottomcontain {
+    width: 90vw;  
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    min-height: 20rem;
+}
+
+.lobbycontain {
+    background: var(--chakra-colors-chakra-subtle-bg); 
+    border-radius: 1.25rem;
+    border-color: #ff7f26;
+    border-width: 0.188rem; 
+    position: relative;
+    max-width: 45rem;
+    width: 45rem;
+    height: 20rem;
+    margin-right: 1%;
+}
+
+@media (max-width: 56rem) {
+    .selectDif {
+        max-width: 100%;
+        height: 20rem;
+    }
+}
+
+@media (max-width: 56rem) {
+    .bottomcontain {
+        flex-direction: column;
+        max-width: 100%;
+        
+    }
+
+    .lobbycontain, .Chat {
+        max-width: 100%;
+        margin-bottom: 1.25rem;
+    }
 }
