--- a/react-frontend/src/css/Multiplayer.css
+++ b/react-frontend/src/css/Multiplayer.css
@@ -57,10 +57,11 @@
 }
 
 .bottomcontain {
-    width: 90vw;  
+    width: 90vw; 
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: stretch;
     min-height: 20rem;
 }
 
@@ -69,12 +70,12 @@
     border-radius: 1.25rem;
     border-color: #ff7f26;
     border-width: 0.188rem; 
-    position: relative;
-    max-width: 45rem;
-    width: 45rem;
-    height: 20rem;
-    margin-right: 1%;
+    min-height: 20rem;
+    max-width: 50%;
+    flex: 1;
+    margin-right: 1rem;
 }
+
 
 @media (max-width: 56rem) {
     .selectDif {
@@ -90,8 +91,9 @@
         
     }
 
-    .lobbycontain, .Chat {
+    .lobbycontain, .chatclass {
         max-width: 100%;
         margin-bottom: 1.25rem;
+        min-width: 100%;
     }
 }
