--- a/react-frontend/src/css/index.css
+++ b/react-frontend/src/css/index.css
@@ -69,3 +69,7 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 } */
+
+h1, h2, h3, h4, h5, h6, .chakra-heading {
+  font-family: 'Calistoga', sans-serif !important;
+}
