--- a/react-frontend/src/css/SinglePlayer.css
+++ b/react-frontend/src/css/SinglePlayer.css
@@ -12,6 +12,8 @@
     flex-direction: row;
     align-items: center;
     width: 100vw;
+    justify-content: flex-start;
+    margin: 0;
 }
 
 .difficulty-buttons-group {
