fixed scoreboard issue

--- a/react-frontend/src/css/Scoreboard.css
+++ b/react-frontend/src/css/Scoreboard.css
@@ -5,20 +5,17 @@
     width: 15.6rem;
     border-color: #ff7f26;
     border-width: 0.2rem; 
-    position: relative;
     padding: 1.3rem 1.3rem;
-    text-align: center;
+    display: flex;
+    flex-direction: column;
 }
 
 .score {
-    position: absolute;
-    right: 1.9rem;
+    position: relative;
+    left: 1rem;
 }
 
 .score-head {
-    position: relative;
-    vertical-align: middle;
     font-size: x-large;
     font-weight: bold;
-    left: 10.4rem;
 }
