--- a/react-frontend/src/css/MultiplayerPlayScreen.css
+++ b/react-frontend/src/css/MultiplayerPlayScreen.css
@@ -64,7 +64,7 @@
     box-sizing: border-box;
     margin: 1.5px;
     border: 1.5px solid; 
-    border-color: white;
+    border-color: var(--chakra-colors-chakra-body-text)
 }
 
 .rules {
