--- a/react-frontend/src/css/SinglePlayer.css
+++ b/react-frontend/src/css/SinglePlayer.css
@@ -49,11 +49,11 @@
     cursor: pointer;
 }
 
-.right-container {
+.score-container {
     display: flex;
     align-items: center;
-    position: absolute; 
-    top: 0; 
+    position: fixed; 
+    bottom: 0; 
     right: 0; 
     padding: 1vw;
     gap: 1vw;
@@ -66,7 +66,7 @@
     box-sizing: border-box;
     margin: 1.5px;
     border: 1.5px solid; 
-    border-color: white;
+    border-color: var(--chakra-colors-chakra-body-text)
 }
 
 .rules {
